// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getFilterFromMust applies date range only for undefined filter string 1`] = `
Object {
  "bool": Object {
    "filter": Array [
      Object {
        "range": Object {
          "@timestamp": Object {
            "gte": "start range",
            "lte": "end range",
          },
        },
      },
    ],
  },
}
`;

exports[`getFilterFromMust applies filter clauses to output object 1`] = `
Object {
  "bool": Object {
    "filter": Array [
      Object {
        "range": Object {
          "@timestamp": Object {
            "gte": "start range",
            "lte": "end range",
          },
        },
      },
      Object {
        "match": Object {
          "monitor.status": Object {
            "operator": "and",
            "query": "up",
          },
        },
      },
    ],
  },
}
`;
